# REST-API-for-booking-tables-in-a-restaurant

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  TASK.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
migrations/: env.py
migrations/versions/: 2025_06_19_1600-32ed18e0f63b_first_init.py
restaurant_api/: app.py  db_config.py  log_config.py
restaurant_api/configs/: __init__.py  db_config.py  log_config.py
restaurant_api/database/: __init__.py  async_generator.py  db_session.py  for_test_db_session.py  test_db_session.py
restaurant_api/exceptions/: __init__.py  bad_request.py  not_found.py
restaurant_api/models/: __init__.py  association.py  base.py  dish.py  order.py
restaurant_api/models/mixins/: __init__.py  pk_mix.py
restaurant_api/routers/: __init__.py  dish_routes.py  order_routes.py
restaurant_api/schemas/: __init__.py  dish.py  order.py
restaurant_api/services/: __init__.py
restaurant_api/services/dish_crud/: add_dish.py  all_dishes.py  check_name.py  delete_without_order.py  dish_by_id.py
restaurant_api/services/order_crud/: add_order.py  all_orders.py  delete_order.py  order_by_id.py  update_status.py
restaurant_api/utils/: __init__.py  case_converter.py
tests/: conftest.py
tests/test_client/: test_routes.py
tests/test_dish/: test_add_dish.py  test_all_dishes.py  test_delete_dish.py
tests/test_order/: test_add_order.py  test_all_orders.py  test_delete_order.py  test_update_status.py
