[project]
name = "rest-api-for-booking-tables-in-a-restaurant"
version = "0.1.0"
description = ""
authors = [
    {name = "Vadim Bakhtiarov"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "orjson (>=3.10.18,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.0"
loguru = "^0.7.3"
flake8 = "^7.2.0"
pytest-asyncio = "^1.0.0"
pytest = "^8.4.1"
isort = "^6.0.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "dish: Маркер для блюд",
    "order: Марке для заказов"
]

[tool.black]
line-length = 79

[tool.pylint."MESSAGES CONTROL"]
disable = """
    E1101,
    W0613
"""

